--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "license": "ISC",  
+  "license": "ISC",
   "scripts": {
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
@@ -8,13 +8,19 @@
     "@coral-xyz/anchor": "^0.30.1"
   },
   "devDependencies": {
-    "chai": "^4.3.4",
-    "mocha": "^9.0.3",
-    "ts-mocha": "^10.0.0",
     "@types/bn.js": "^5.1.0",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.0.0",
-    "typescript": "^4.3.5",
-    "prettier": "^2.6.2"
-  }
+    "chai": "^4.3.4",
+    "mocha": "^9.0.3",
+    "prettier": "^2.6.2",
+    "solana-bankrun": "^0.3.1",
+    "ts-mocha": "^10.0.0",
+    "typescript": "^4.3.5"
+  },
+  "name": "inc",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/Belfio/inc.git",
+  "author": "albelfio <5812464+Belfio@users.noreply.github.com>"
 }
