It initializes the factory and creates the companies

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "license": "ISC",
   "scripts": {
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
-    "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
+    "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
+    "test": "anchor test --skip-local-validator",
+    "validator": "solana-test-validator -r"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1"
