--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "@solana/web3.js": "^1.95.4",
     "isbot": "^4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.0",
+    "postcss": "^8.4.21",
+    "autoprefixer": "^10.4.14"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.13.1",
@@ -39,7 +42,6 @@
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
-    "autoprefixer": "^10.4.19",
     "chai": "^4.3.4",
     "eslint": "^8.38.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -48,10 +50,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "mocha": "^9.0.3",
-    "postcss": "^8.4.38",
     "prettier": "^2.6.2",
     "solana-bankrun": "^0.3.1",
-    "tailwindcss": "^3.4.4",
     "ts-mocha": "^10.0.0",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
