--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./app/*"]
+      "~/*": ["app2/*"]
     },
 
     // Remix takes care of building everything in `remix build`.
