--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@coral-xyz/anchor": "^0.30.1",
     "autoprefixer": "^10.4.14",
     "class-variance-authority": "^0.7.0",
+    "dotenv": "^16.4.5",
     "isbot": "^4",
     "zod": "^3.23.8"
   },
