--- a/programs/inc/Cargo.toml
+++ b/programs/inc/Cargo.toml
@@ -18,3 +18,5 @@ idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
 anchor-lang = "0.30.1"
+sha2 = "0.10.8"
+inc-factory = { path = "../inc-factory", features = ["cpi"] }
